rains_docker_kub/sav/base-service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-base-rains-predict
  labels:
    app: container-base-rains-predict
spec:
  type: ClusterIP
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: container-base-rains-predict
